python/testData/quickFixes/PyTypeHintsQuickFixTest/callableTwoElementsParenthesizedAsFirst.py
from typing import Callable

g: Callable[<error descr="'Callable' first parameter must be parameter expression">(int<caret>)</error>, str]